# sysdtime-py

./: .pre-commit-config.yaml  API.md  CHANGELOG.md  LICENSE  README.md  TEST_SUITE.md  TEST_SUMMARY.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
sysdtime/: __init__.py  constants.py  matcher.py  parser.py  searcher.py  timestamp.py  types.py
sysdtime/tests/: __init__.py  conftest.py  test_constants.py  test_integration.py  test_matcher.py  test_parser.py  test_searcher.py  test_timestamp.py  test_types.py
