[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysdtime-py"
version = "0.1.2"
description = "A vibe-coded pure Python implementation for parsing systemd.time(7)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "geckyzz"}]
keywords = ["systemd", "time", "calendar", "parser", "scheduling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.ruff]
target-version = "py37"
line-length = 100
output-format = "grouped"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "A", "C4", "RUF"]
ignore = ["E501", "RUF012"]  # Line too long; Mutable class constants (SHORTHANDS, TIME_UNITS)

[tool.hatch.build.targets.wheel]
packages = ["sysdtime"]

[tool.pytest.ini_options]
testpaths = ["sysdtime/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
